Added band members roles

--- a/Labs/cs.html
+++ b/Labs/cs.html
@@ -13,10 +13,10 @@
             </p>
             <h2>Band Members</h2>
             <p>
-                Alex Pall
+                Alex Pall - DJ
             </p>
             <p>
-                Andrew Taggart
+                Andrew Taggart - DJ
             </p>
         </div>
     </body>
